# xBuilder

./: .gitignore  .gitmodules  CMakeLists.txt
API/: CMakeLists.txt  README.md  xAPI_Types.c  xAPI_Types.h  xApi_Agent.c  xApi_Agent.h  xApi_BOM.c  xApi_BOM.h  xApi_Definitions.c  xApi_Definitions.h  xApi_Errors.c  xApi_Errors.h  xApi_Evaluator.c  xApi_Evaluator.h  xApi_Macros.c  xApi_Macros.h  xApi_Option.c  xApi_Option.h  xApi_Part.c  xApi_Part.h  xApi_Project.c  xApi_Project.h  xApi_Types.c  xApi_Types.h
Documents/: 如何将c语言窗口居中 _ PingCode智库 (2024_10_19 10_52_13).html
Resources/: README.md
Windows/: CMakeLists.txt  xBuilder_Main.c  xBuilder_Main.h
Windows/MainFrame/: MainFrame.c  MainFrame.h  MainFrame_OnCreate.hpp  MainFrame_OnDestroy.c  MainFrame_OnDestroy.h  MainFrame_OnPaint.hpp
Windows/ProjectView/: ProjectView.c  ProjectView.h  ProjectView_OnCreate.hpp  ProjectView_OnPaint.hpp
Windows/Widgets/: xBuilder_MainFrame.c  xBuilder_MainFrame.h  xBuilder_MainFrame.rc  xBuilder_MainFrame_OnCommand.hpp  xBuilder_MainFrame_OnDestroy.c  xBuilder_MainFrame_OnDestroy.h  xBuilder_MainFrame_OnDestroy.hpp  xBuilder_MainFrame_RC.c  xBuilder_MainFrame_RC.h
Windows/uiToolkit/: uiToolkit_Types.c  uiToolkit_Types.h  uiToolkit_View.c  uiToolkit_View.h
